testfx/errors/error_tests/edge_06_else_keyword.fx
// 测试: 使用 else 关键字
x := 10
if (x > 5) {
    println("big")
} else {
    println("small")
}
